--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,10 @@
 
 :root {
     --primary-color: #2d3436;
-    --secondary-color: #0984e3;
+    --secondary-color: #dc09e3;
     --accent-color: #197a79;
     --text-color: #2d3436;
-    --light-bg: #f5f6fa;
+    --light-bg: #34499e;
     --dark-bg: #2d3436;
 }
 
